<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:id="@+id/view2"
        android:layout_width="374dp"
        android:layout_height="591dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="80dp"
        android:background="@color/formBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/profilePic2"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="88dp"
        android:contentDescription="@string/profilePic"
        android:src="@drawable/sample"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="155dp"
        android:layout_height="353dp"
        android:layout_marginTop="224dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.104"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/studentId"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/student_id01"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/studentName"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/student_name1"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/DOB"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/date_of_birth"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/gender"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/gender"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/school"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/school"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/address"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/contacNO"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/contact_no"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/guardianNane"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/guardians_name"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/guardianCNo"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:text="@string/guardians_contact_no"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="201dp"
        android:layout_height="353dp"
        android:layout_marginTop="224dp"
        android:layout_marginEnd="29dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView31"
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/textView32"
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/textView33"
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="31dp">

            <RadioButton
                android:id="@+id/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioButton
                android:id="@+id/female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/female"
                app:layout_constraintStart_toEndOf="@+id/male"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textView34"
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/textView35"
            android:layout_width="match_parent"
            android:layout_height="60dp" />

        <TextView
            android:id="@+id/textView36"
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/textView37"
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/textView38"
            android:layout_width="match_parent"
            android:layout_height="52dp" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="136dp"
        android:contentDescription="@string/edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/edi" />

    <Button
        android:id="@+id/Save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
</androidx.constraintlayout.widget.ConstraintLayout>