<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:alpha="0.2"
        android:contentDescription="@string/background"
        android:src="@drawable/mad"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/profilePic"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/profilePic"
        android:src="@drawable/sample"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="163dp"
        android:layout_height="433dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="200dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/studentId1"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/student_id01"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/studentName"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/student_name1"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/DOB"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/date_of_birth"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/school"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/school"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/address"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/contacNO"
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:text="@string/contact_no"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/guardianNane"
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:text="@string/guardians_name"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/guardianCNo"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:text="@string/guardians_contact_no"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="163dp"
        android:layout_height="436dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="200dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/layout1"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/id"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView32"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView33"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView35"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView36"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView37"
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView38"
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView39"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:textStyle="bold" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/profileEdit"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="28dp"
        android:background="@color/transparent"
        android:contentDescription="@string/edit"
        android:src="@drawable/edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>